--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@uploadthing/react": "^7.3.3",
     "@zegocloud/zego-uikit-prebuilt": "^2.16.0",
+    "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.542.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "next": "^16.1.6",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
